--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REAT_APP_authDomain=teech-to-speech.firebaseapp.com
-REAT_APP_apiKey=AIzaSyBJgXSbNR8afiPH4CqGj-9xVQxIlt6O3HM
-REAT_APP_storageBucket=teech-to-speech.appspot.com
-REAT_APP_projectId=teech-to-speech
-REAT_APP_appId=1:914052990797:web:8eba00864ba8fb95869904
-REAT_APP_messagingSenderId=914052990797
+REACT_APP_authDomain=text-to-speech-9b321.firebaseapp.com
+REACT_APP_apiKey=AIzaSyBstM6ztoFjN7rPLGYZFnNVGsaYYOkzoGA
+REACT_APP_storageBucket=text-to-speech-9b321.appspot.com
+REACT_APP_projectId=text-to-speech-9b321
+REACT_APP_appId=1:549194668911:web:44f9db9c16422d845c269a
+REACT_APP_messagingSenderId=549194668911
