--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.19.1",
+    "firebase-tools": "^11.25.2",
+    "global": "^4.4.0",
     "init": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-full-screen": "^1.1.1",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
